--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
 }
 :root {
   /* Primary */
-  --Bright-Blue: hsl(220, 98%, 61%);
+  --Bright-Blue: #9c27b0;
   --Check-Background: linear-gradient(
     hsl(192, 100%, 67%) to hsl(280, 87%, 65%)
   );
@@ -33,6 +33,7 @@
 
 /* start component */
 .up {
+  display: none;
   position: fixed;
   bottom: 25px;
   font-size: 20px;
@@ -48,8 +49,11 @@
   -ms-transition: var(--main-transition);
   -o-transition: var(--main-transition);
 }
-
+.up.show {
+  display: block;
+}
 .down {
+  display: none;
   position: fixed;
   bottom: 25px;
   font-size: 20px;
@@ -64,6 +68,9 @@
   -moz-transition: var(--main-transition);
   -ms-transition: var(--main-transition);
   -o-transition: var(--main-transition);
+}
+.down.show {
+  display: block;
 }
 @media (max-width: 767px) {
   .up {
@@ -291,8 +298,8 @@ input:focus {
 }
 
 .app .header .add .submit {
-  width: 22px;
-  height: 22px;
+  width: 25px;
+  height: 25px;
   position: absolute;
   left: 10px;
   top: 50%;
@@ -324,13 +331,36 @@ input:focus {
 .app .header .add .submit i {
   display: none;
 }
+.app .header .add .submitting {
+  position: absolute;
+  font-size: 20px;
+  right: 30px;
+  color: var(--Bright-Blue);
+  top: 50%;
+  cursor: pointer;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(-50%) rotateZ(54deg);
+  -webkit-transform: translateY(-50%) rotateZ(54deg);
+  -moz-transform: translateY(-50%) rotateZ(54deg);
+  -ms-transform: translateY(-50%) rotateZ(54deg);
+  -o-transform: translateY(-50%) rotateZ(54deg);
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+
 .app .header .add input {
   box-shadow: 2px 2px 12px rgb(0 0 0 / 12%);
   color: var(--Bright-Blue);
   padding: 20px 50px;
   width: 500px;
-  text-transform: capitalize;
-
+  font-weight: 600;
+  font-size: 17px;
   caret-color: var(--Bright-Blue);
   background-color: white;
   border-radius: 6px;
@@ -356,6 +386,7 @@ input:focus {
   color: #b9b9b9;
 }
 .app .list {
+  width: 500px;
   background-color: white;
   z-index: 2;
   box-shadow: 2px 2px 12px rgb(0 0 0 / 12%);
@@ -383,25 +414,83 @@ input:focus {
     margin-top: 40px;
   }
 }
-
-.app .list .tasks .task {
+.app .list .tasks.empty {
+  height: 12rem;
+  position: relative;
+}
+.app .list .tasks.empty::before {
+  font-family: "Font Awesome\ 5 Free";
+  content: "\f5b8"; /* FontAwesome Unicode */
+  background-repeat: no-repeat;
+  text-transform: capitalize;
+  width: 100%;
+  height: 50%;
+  text-align: center;
+  position: absolute;
+  font-size: 45px;
+  top: 50%;
+  left: 50%;
   color: var(--Bright-Blue);
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+.app .list .tasks.empty::after {
+  content: "There are no Tasks ";
+  background-repeat: no-repeat;
+  text-transform: capitalize;
+  width: 100%;
+  height: 50%;
+  text-align: center;
+  position: absolute;
+  font-size: 40px;
+  top: 40px;
+  left: 50%;
+  color: var(--Light-Grayish-Blue1);
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+@media (max-width: 767px) {
+  .app .list .tasks.empty::after {
+    font-size: 35px;
+  }
+}
+@media (max-width: 480px) {
+  .app .list .tasks.empty::after {
+    font-size: 30px;
+  }
+}
+.app .list .tasks .task {
+  font-weight: 600;
+  font-size: 18px;
+  /* color: var(--Very-Dark-Grayish-Blue2); */
+  color: var(--Bright-Blue);
+  word-break: break-all;
   padding: 20px 50px;
   position: relative;
   cursor: pointer;
   width: 500px;
   border-bottom: 1px solid hsl(222deg 60% 83% / 45%);
 }
+.app .list.dark .tasks .task {
+  border-bottom: 1px solid var(--Very-Dark-Grayish-Blue2);
+  /* color: var(--Light-Grayish-Blue2); */
+  color: var(--Bright-Blue);
+}
 .app .list .tasks .task .submit {
-  width: 22px;
-  height: 22px;
+  width: 25px;
+  height: 25px;
   position: absolute;
   left: 10px;
   top: calc(50% - 1px);
   cursor: pointer;
   z-index: 2;
   color: white;
-
   border: 1px solid #d5d5d5;
   display: flex;
   padding: 2px 3px 0;
@@ -472,6 +561,26 @@ input:focus {
 .app .list .tasks .task:hover .delete {
   display: flex;
 }
+.app .list .tasks .task .edit {
+  cursor: pointer;
+  transition: 0.3s;
+  position: absolute;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  right: 30px;
+  display: none;
+  z-index: 2;
+  top: 50%;
+  color: var(--Light-Grayish-Blue1);
+  transform: translateY(-50%);
+  align-items: center;
+  justify-content: center;
+}
+
+.app .list .tasks .task:hover .edit {
+  display: flex;
+}
 .app .stats {
   display: flex;
   justify-content: space-between;
@@ -485,7 +594,7 @@ input:focus {
   padding-left: 15px;
   color: var(--Dark-Grayish-Blue);
 }
-.app .stats .count span{
+.app .stats .count span {
   font-size: 16px;
 }
 .app .stats .filter {
@@ -572,4 +681,8 @@ input:focus {
   .sign {
     margin: 0px auto 0;
   }
+}
+.app .stats .ele.disabled {
+  pointer-events: none;
+  opacity: 40%;
 }
