--- a/CSS/style.css
+++ b/CSS/style.css
@@ -145,23 +145,17 @@
     background-color: var(--Very-Dark-Desaturated-Blue);
   }
 }
-/*End Dark mode */
-/* checked */
-/* ####################### */
-/* checked */
-.app .header .done .submit {
+
+.app .list .tasks .done .submit {
   background: linear-gradient(45deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
   border: none;
 }
-.app .header .done .submit i {
+.app .header .add .submit i {
+  display: none;
+}
+.app .list .tasks .task.done .submit i {
   display: block;
-}
-.app .list .tasks .done .submit {
-  background: linear-gradient(45deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
-  border: none !important;
-}
-.app .list .tasks .done .submit i {
-  display: block !important;
+  pointer-events: none;
 }
 .app .list .tasks .done {
   color: var(--Light-Grayish-Blue1);
@@ -194,6 +188,29 @@ input:focus {
   border: none;
 }
 
+.gu-transit {
+  opacity: 1;
+  background-color: var(--Very-Light-Gray);
+  border: 1px solid var(--Light-Grayish-Blue1);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+}
+
+.gu-transit:hover {
+  transform: scale(1.02);
+  -webkit-transform: scale(1.02);
+  -moz-transform: scale(1.02);
+  -ms-transform: scale(1.02);
+  -o-transform: scale(1.02);
+}
+.dark .gu-transit {
+  background-color: var(--Very-Dark-Grayish-Blue3);
+}
 /* End Global Rules */
 
 .app {
@@ -328,9 +345,7 @@ input:focus {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
-.app .header .add .submit i {
-  display: none;
-}
+
 .app .header .add .submitting {
   position: absolute;
   font-size: 20px;
@@ -353,7 +368,13 @@ input:focus {
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
 }
-
+.app .header .add.edit .submitting {
+  transform: translateY(-50%) rotateZ(0deg);
+  -webkit-transform: translateY(-50%) rotateZ(0deg);
+  -moz-transform: translateY(-50%) rotateZ(0deg);
+  -ms-transform: translateY(-50%) rotateZ(0deg);
+  -o-transform: translateY(-50%) rotateZ(0deg);
+}
 .app .header .add input {
   box-shadow: 2px 2px 12px rgb(0 0 0 / 12%);
   color: var(--Bright-Blue);
@@ -368,6 +389,26 @@ input:focus {
   -moz-border-radius: 6px;
   -ms-border-radius: 6px;
   -o-border-radius: 6px;
+}
+.app .header .add .cancelEdit {
+  display: none;
+}
+.app .header .add.edit .cancelEdit {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 15%;
+  transform: translate(0, -19px);
+  background-color: var(--Bright-Blue);
+  border: 1px solid white;
+  border-radius: 30px;
+  width: 110px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--Light-Grayish-Blue3);
 }
 @media (max-width: 767px) {
   .app .header .add input {
@@ -415,27 +456,21 @@ input:focus {
   }
 }
 .app .list .tasks.empty {
-  height: 12rem;
+  height: 6rem;
   position: relative;
 }
-.app .list .tasks.empty::before {
-  font-family: "Font Awesome\ 5 Free";
-  content: "\f5b8"; /* FontAwesome Unicode */
+.emptyTasks {
+  display: none;
+}
+.app .list .tasks.empty + .emptyTasks {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-repeat: no-repeat;
-  text-transform: capitalize;
+  object-fit: contain;
   width: 100%;
-  height: 50%;
+  height: fit-content;
   text-align: center;
-  position: absolute;
-  font-size: 45px;
-  top: 50%;
-  left: 50%;
-  color: var(--Bright-Blue);
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
 }
 .app .list .tasks.empty::after {
   content: "There are no Tasks ";
@@ -585,6 +620,7 @@ input:focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  user-select: none;
 }
 .app .stats .count {
   font-size: 14px;
@@ -598,6 +634,7 @@ input:focus {
   font-size: 16px;
 }
 .app .stats .filter {
+  user-select: none;
   font-size: 14px;
   display: flex;
   justify-content: space-between;
@@ -625,6 +662,7 @@ input:focus {
   width: 70px;
   font-weight: bold;
   cursor: pointer;
+  user-select: none;
   margin: 0 5px;
   color: var(--Dark-Grayish-Blue);
   -webkit-transition: 0.3s;
@@ -651,7 +689,7 @@ input:focus {
   color: var(--Very-Dark-Grayish-Blue1);
 }
 .app .stats .filter .choosen {
-  color: var(--Bright-Blue) !important;
+  color: var(--Bright-Blue);
 }
 .app .stats .clear {
   transition: 0.3s;
